# vg-rust-hello

./: .gitignore  .npmrc  Cargo.toml  Dockerfile  Makefile.toml  README.md  cspell.config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cspell/: backend_custom_words.txt  project_words.txt
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/desktop/: .eslintrc.cjs  package.json  vite.config.ts
apps/desktop/src/: env.ts  index.html  main.js  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/server/: Cargo.toml  package.json
apps/server/docker/: Dockerfile  entrypoint.sh
apps/server/src/: main.rs  utils.rs
apps/server/wasm/: README.md  _Cargo.toml  index.html
apps/server/wasm/src/: lib.rs
core/: Cargo.toml
interface/: README.md
scripts/: package.json
scripts/utils/: shared.mjs
src/: main.rs
