[workspace]
resolver = "2"
members = [
    "core",
    "apps/cli",
    "apps/desktop/src-tauri",
    "apps/server",
]

[workspace.package]
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/gurv/vg-rust-hello"

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

rspc = { version = "0.1.4" }
specta = { version = "=2.0.0-rc.7" }
tauri-specta = { version = "=2.0.0-rc.4" }

axum = "=0.6.20"
http = "0.2.9"
tokio = "1.36.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
