[package]
name = "vg-desktop"
version = "0.2.5"
description = "The universal file manager."
authors = ["gurv <vladimir.gurinovich@gmail.com>"]
default-run = "vg-desktop"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
vg-core = { path = "../../../core" }
# tauri = { version = "=1.5.3", features = [
# 	"macos-private-api",
# 	"path-all",
# 	"protocol-all",
# 	"os-all",
# 	"shell-all",
# 	"dialog-all",
# 	"linux-protocol-headers",
# 	"updater",
# 	"window-all",
# 	"native-tls-vendored",
# 	"tracing",
# ] }
tauri = { version = "=1.6.1", features = [
	"linux-protocol-headers",
	"native-tls-vendored",
	"tracing",
] }
tauri-specta = { workspace = true, features = ["typescript"] }

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
